# GatewayPub

./: CMakeLists.txt  DataTool.cpp  DataTool.h  MdSpi.cpp  MdSpi.h  Proxy.cpp  Proxy.h  Publisher.cpp  Publisher.h  README.md  Subscriber.cpp  Subscriber.h  client.cpp  main.cpp
config/: instruments.json  login.json
protobuf/: MarketSnapshot.proto
